--- a/datri_lombardi_maiello.Rmd
+++ b/datri_lombardi_maiello.Rmd
@@ -646,22 +646,22 @@ In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dop
 df_ridotto <- df[, c("Bottom", "Diagonal")]
 ```
 
-TODO: Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
+Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
 
 ```{r}
 fviz_nbclust(df_ridotto, kmeans, method = "wss") +
-  geom_vline(xintercept = 4, linetype = 2)+
+  geom_vline(xintercept = 2, linetype = 2)+
   labs(subtitle = "Elbow method")
 ```
 
-TODO: Il metodo Silhouette.
+Il metodo Silhouette.
 
 ```{r}
 fviz_nbclust(df_ridotto, kmeans, method = "silhouette")+
   labs(subtitle = "Silhouette method")
 ```
 
-TODO: Ed infine la GAP analysis:
+Ed infine la GAP analysis:
 
 ```{r}
 set.seed(123)
@@ -669,7 +669,7 @@ fviz_nbclust(df_ridotto, kmeans, nstart = 25, method = "gap_stat", nboot = 500)+
   labs(subtitle = "Gap statistic method")
 ```
 
-TODO: Il primo metodo indica quattro come numero ottimale di cluster, il secondo ne suggerisce due mentre la gap statistic tre. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+I risultati ottenuti con i primi due metodi, elbow e silhouette, coincidono con quelli ottenuti sul dataset completo, mentre il gap statistic method identifica 2 cluster.
 
 #### 4.1.2.2. Validazione
 TODO: da fare
@@ -684,7 +684,7 @@ In questo capitolo i cluster vengono creati utilizzando l'algoritmo k-means, dop
 df_pca <- scale(banknote_pca[, -1])
 ```
 
-TODO: Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
+Successivamente si determina il numero ottimale di cluster da utilizzare nell'algoritmo, impiegando il metodo Elbow.
 
 ```{r}
 fviz_nbclust(df_pca, kmeans, method = "wss") +
@@ -692,14 +692,14 @@ fviz_nbclust(df_pca, kmeans, method = "wss") +
   labs(subtitle = "Elbow method")
 ```
 
-TODO: Il metodo Silhouette.
+Il metodo Silhouette.
 
 ```{r}
 fviz_nbclust(df_pca, kmeans, method = "silhouette")+
   labs(subtitle = "Silhouette method")
 ```
 
-TODO: Ed infine la GAP analysis:
+Ed infine la GAP analysis:
 
 ```{r}
 set.seed(123)
@@ -707,7 +707,7 @@ fviz_nbclust(df_pca, kmeans, nstart = 25, method = "gap_stat", nboot = 500, verb
   labs(subtitle = "Gap statistic method")
 ```
 
-TODO: Il primo metodo indica quattro come numero ottimale di cluster, il secondo ne suggerisce due mentre la gap statistic tre. Poiché il dataset è composto da 200 osservazioni, equamente suddivise tra banconote autentiche e contraffatte, si sceglie di impostare il numero di cluster a due e si procede con l'esecuzione dell'algoritmo.
+In questo caso, il numero di cluster identificato differisce significativamente rispetto agli altri dataset: l'elbow method e il silhouette method individuano 4 cluster, mentre il gap statistic method ne identifica 1.
 
 #### 4.1.3.2. Validazione
 TODO: da fare
